--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 # test p8 cart files should not have their line endings changed on checkout
-*.p8 text=false
+# use 'binary' settings for p8 cart files to force this
+*.p8 binary
